--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
 
-  <body>
-    <div class="total">
-      <div class="input-box">
-        <h1 class="title">To Do List</h1>
-        <p class="description">
-          Simple Todo List with adding and filter by diff status.
-        </p>
-        <input type="text" class="input" />
-        <button type="button" class="add-btn">Add</button>
-      </div>
-      <div class="list-content">
-        <ol class="total-list">
-          <li class="task" id="task1">
-            <input type="checkbox" class="choose" id="choose-task1" />任务1
-          </li>
-        </ol>
-      </div>
-      <div class="foot">
-        <button type="button" class="bottom-btn" id="all-btn">All</button>
-        <button type="button" class="bottom-btn" id="active-btn">Active</button>
-        <button type="button" class="bottom-btn" id="complete-btn">
-          Complete
-        </button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <div class="total">
+    <div class="input-box">
+      <h1 class="title">To Do List</h1>
+      <p class="description">
+        Simple Todo List with adding and filter by diff status.
+      </p>
+      <form id="todo-content" action="#" onsubmit="addStorage()">
+        <input type="text" class="input-content" />
+        <button type="submit" class="add-btn">Add</button>
+      </form>
     </div>
-    <script type="text/javascript" src="index.js"></script>
-  </body>
+    <div class="list-content">
+      <ol class="total-list">
+        <!-- <li class="task">
+          <input type="checkbox" class="choose" id="choose-task1" />任务1
+        </li> -->
+      </ol>
+    </div>
+    <div class="foot">
+      <button type="button" class="bottom-btn" id="all-btn">All</button>
+      <button type="button" class="bottom-btn" id="active-btn">Active</button>
+      <button type="button" class="bottom-btn" id="complete-btn">Complete</button>
+    </div>
+  </div>
+  <script type="text/javascript" src="index.js"></script>
+</body>
+
 </html>
